All the alignment issues and buttons issues resolved

--- a/style.css
+++ b/style.css
@@ -723,7 +723,7 @@ display: none;
 
 .portfolio-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
   max-width: 100%;
   gap: 35px;
   margin: 0 auto;
@@ -827,6 +827,12 @@ display: none;
   width: 100%;
   margin: 20px 0;
   border-radius: 10px;
+}
+
+.btn-container-popup {
+  display: flex;
+  justify-content: space-between;
+  gap: 24px;
 }
 
 /* get in touch buttonsections */
@@ -1147,6 +1153,11 @@ display: none;
     padding: 10px 15px;
     letter-spacing: 1px;
     border-radius: 10px;
+}
+
+.contact-list li span {
+  color: var(--third-color);
+  margin-left: 0;
 }
 
 }
